--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>KSP - Career Science Checklist Generator</h1>
-        <p>The KSP checklist to end all checklists</p>
+        <h1>Kerbal Space Program - Career Science Checklist Generator</h1>
+        <p>A KSP checklist</p>
 
         <p class="view"><a href="https://github.com/bigorangemachine/ksp_js_career_sci_list">View the Project on GitHub <small>bigorangemachine/ksp_js_career_sci_list</small></a></p>
 
@@ -42,7 +42,7 @@
 <section class="wrap">
 	<div id="holder"><p>Drag your KSP Save Game Here</p></div> 
 	<noscript type="text/html"><p id="no-js-msg">JavaScript is Required</p></noscript>
-	<p id="status">Please use the latest Chrome or Firefox Browser.</p>
+	<p id="status">Please use a modern browser such as the newest <a href="https://www.google.com/intl/en-CA/chrome/browser/" target="_blank">Chrome</a> or <a href="https://mozilla.org" target="_blank">Firefox</p> Browsers.</p>
 
 </section>
       <footer>
