Want working commit

--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@ if(planetName=='Kerbin'){console.log('=====================================',bio
 				}
 			}
 
-console.log(planet_data.ident,'user_sci',user_sci);
-break;
+//console.log(planet_data.ident,'user_sci',user_sci);
+//break;
 			var new_arr=build_td_vals(planet_data.name,t_rail.concat(extra_rail),planet_data.biomes,science_arr);
 			if(new_arr.length>0){
 				for(var m=0;m<new_arr.length;m++){
